  * Fixed problems detecting BLAS and LAPACK shared libraries in configure.
    Thanks to Karri Varris for the bug report.

  * Fixed trailing spaces in sed command, which were breaking 'make install'
    on some systems.  (Thanks to Ron Chase for the bug report.)

  * Added epsilon-input-file variable, so that you can now read the
    dielectric function from a file (see manual reference section).

MPB 0.8.1 (11/22/1999)

  * Added output-hfield-x, output-dfield-y, etcetera, functions for
    outputting only specific field components (see manual reference section).

  * Sped up HDF5 field output routines.

  * Added output-copies variable to set the number of periods output by
    the band output functions (see manual reference section).

MPB 0.8 (11/19/1999)

  * Initial public release.